syntax = "proto3";

package file;

option go_package = "./pb";

message UploadReq {
  string file_name = 1;
  bytes data = 2;
  string hash = 3;
  bool is_last = 4; // 是不是最后一段
  uint64 uid = 5;
  string bucket = 6;
  uint64 part_number = 7;
}

message UploadResp {
  string etag = 1;      // MinIO 返回的分片 ETag
  string upload_id = 2;
}


message CreateBucketReq {
  string bucket = 1;
}

message CreateBucketResp {
  string bucket = 1;
}
// ========== 服务定义 ==========
service File {
  // 流式上传分片
  rpc Upload(UploadReq) returns (UploadResp);
  rpc CreateBucket (CreateBucketReq) returns (CreateBucketResp);

}